--- a/Sleep-Tracker-WebApi/appsettings.json
+++ b/Sleep-Tracker-WebApi/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SleepTracker.db;Integrated Security=True"
+    "DefaultConnection": "Default Connection Here"
   }
 }
